--- a/templates/student/progress.html
+++ b/templates/student/progress.html
@@ -41,7 +41,7 @@
             <td style="padding:0px"><button type="button" class="btn btn-success btn-circle"></button><BR><font size=-2>{{work.publication_date|date:"m/d"}}</font></td>                   
                     {% endif %}
                 {% else %}
-           <td style="padding:0px"><button type="button" class="btn btn-default btn-circle"></button></td>            
+           <td style="padding:0px"><button type="button" class="btn btn-default btn-circle">{{forloop.counter}}</button></td>            
                 {% endif %}
             {% endfor %}
           </tr>
