--- a/templates/student/lessonB.html
+++ b/templates/student/lessonB.html
@@ -160,7 +160,7 @@
       {% include "student/lesson/B05.html" %}
     </div>
     <div class="tab-pane fade show" id="tab2" role="tabpanel">
-      <iframe width="880" height="520" src="https://www.youtube.com/embed/OW-bdZr5wck?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+      <iframe width="880" height="520" src="https://www.youtube.com/embed/wz6GALVLmFE?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
     </div>
     {% if user.is_authenticated %}
     <div class="tab-pane fade show" id="tab3" role="tabpanel">
