--- a/static/layout/styles/layout.css
+++ b/static/layout/styles/layout.css
@@ -153,3 +153,7 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 .main {
     margin-top: 30px; /* Add a top margin to avoid content overlay */
 }
+
+.form-control.target[contenteditable="true"] img {
+    max-width: 100%;
+}
