--- a/templates/student/lesson/B04.html
+++ b/templates/student/lesson/B04.html
@@ -76,5 +76,6 @@
 <BR><BR>    
 <h1>
 作業:修改程式，摸擬球在10公尺高空，以初速5公尺/秒向右自由落下，假設沒有能量耗損，在兩牆間不斷反彈。
+  <iframe width="880" height="520" src="https://www.youtube.com/embed/ZgdO1J5bd2A?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>  
 </h1>
  
