--- a/templates/student/lessonC.html
+++ b/templates/student/lessonC.html
@@ -471,10 +471,10 @@
   <ul class="nav nav-pills" id="myTab" role="tablist">
     <li class="nav-item">
       <a class="nav-link active" data-toggle="tab" href="#tab1" role="tab" aria-selected="true">講義</a>
-    </li><!--
+    </li>
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tab2" role="tab" aria-selected="false">影片</a>
-    </li>-->
+    </li>
     {% if user.is_authenticated %}	
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tab3" role="tab" aria-selected="false">作業</a>
@@ -485,10 +485,10 @@
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="home-tab">
       {% include "student/lesson/C16.html" %}
-    </div><!--
+    </div>
     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab4">
-      <iframe width="880" height="520" src="https://www.youtube.com/embed/3ogEU4NR81A?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
-    </div>-->
+      <iframe width="880" height="520" src="https://www.youtube.com/embed/ettmu1E0VUQ?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+    </div>
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
       {% include "student/submitB.html" with index=16 %}
@@ -502,10 +502,10 @@
   <ul class="nav nav-pills" id="myTab" role="tablist">
     <li class="nav-item">
       <a class="nav-link active" data-toggle="tab" href="#tab1" role="tab" aria-selected="true">講義</a>
-    </li><!--
+    </li>
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tab2" role="tab" aria-selected="false">影片</a>
-    </li>-->
+    </li>
     {% if user.is_authenticated %}	
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tab3" role="tab" aria-selected="false">作業</a>
@@ -516,10 +516,10 @@
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="home-tab">
       {% include "student/lesson/C17.html" %}
-    </div><!--
+    </div>
     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab4">
-      <iframe width="880" height="520" src="https://www.youtube.com/embed/3ogEU4NR81A?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
-    </div>-->
+      <iframe width="880" height="520" src="https://www.youtube.com/embed/eTQd8g7bEXs?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+    </div>
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
       {% include "student/submitB.html" with index=17 %}
@@ -533,10 +533,10 @@
   <ul class="nav nav-pills" id="myTab" role="tablist">
     <li class="nav-item">
       <a class="nav-link active" data-toggle="tab" href="#tab1" role="tab" aria-selected="true">講義</a>
-    </li><!--
+    </li>
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tab2" role="tab" aria-selected="false">影片</a>
-    </li>-->
+    </li>
     {% if user.is_authenticated %}	
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tab3" role="tab" aria-selected="false">作業</a>
@@ -547,10 +547,10 @@
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="home-tab">
       {% include "student/lesson/C18.html" %}
-    </div><!--
+    </div>
     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab4">
-      <iframe width="880" height="520" src="https://www.youtube.com/embed/3ogEU4NR81A?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
-    </div>-->
+      <iframe width="880" height="520" src="https://www.youtube.com/embed/vARRu7jmsqE?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+    </div>
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
       {% include "student/submitB.html" with index=18 %}
@@ -563,10 +563,10 @@
   <ul class="nav nav-pills" id="myTab" role="tablist">
     <li class="nav-item">
       <a class="nav-link active" data-toggle="tab" href="#tab1" role="tab" aria-selected="true">講義</a>
-    </li><!--
+    </li>
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tab2" role="tab" aria-selected="false">影片</a>
-    </li>-->
+    </li>
     {% if user.is_authenticated %}	
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tab3" role="tab" aria-selected="false">作業</a>
@@ -577,10 +577,10 @@
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="home-tab">
       {% include "student/lesson/C19.html" %}
-    </div><!--
+    </div>
     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab4">
-      <iframe width="880" height="520" src="https://www.youtube.com/embed/3ogEU4NR81A?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
-    </div>-->
+      <iframe width="880" height="520" src="https://www.youtube.com/embed/PtghoONpqOs?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+    </div>
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
       {% include "student/submitB.html" with index=19 %}
@@ -593,10 +593,10 @@
   <ul class="nav nav-pills" id="myTab" role="tablist">
     <li class="nav-item">
       <a class="nav-link active" data-toggle="tab" href="#tab1" role="tab" aria-selected="true">講義</a>
-    </li><!--
+    </li>
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tab2" role="tab" aria-selected="false">影片</a>
-    </li>-->
+    </li>
     {% if user.is_authenticated %}	
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tab3" role="tab" aria-selected="false">作業</a>
@@ -607,10 +607,10 @@
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="home-tab">
       {% include "student/lesson/C20.html" %}
-    </div><!--
+    </div>
     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab4">
-      <iframe width="880" height="520" src="https://www.youtube.com/embed/3ogEU4NR81A?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
-    </div>-->
+      <iframe width="880" height="520" src="https://www.youtube.com/embed/qV1_0eyUsGw?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+    </div>
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
       {% include "student/submitB.html" with index=20 %}
