--- a/templates/student/show.html
+++ b/templates/student/show.html
@@ -6,7 +6,7 @@
 			<BR>
               <font color=black>心得感想：</font><BR>{{work.memo}}<BR>              
 			  <font color=black>創作過程：</font><BR>{{work.helps}}<BR>
-              <font color=black>程式碼：</font><pre>{{work.code}}</pre><BR>
+              <font color=black>程式碼：</font>{{work.code|code_highlight|safe}}<BR>
             執行結果：<img width=880 src="/{{ work.picture }}"><BR>
 			{% else %}
 			尚未繳交
