--- a/templates/student/lesson/C11.html
+++ b/templates/student/lesson/C11.html
@@ -24,7 +24,7 @@
 <p>在上面20*20方陣中，包含橫列、縱列、對角線左斜列、右斜列，四個方向，任何連續四個數字相乘，例如紅字的四個數相乘26 × 63 × 78 × 14 結果是1788696。</p>
 <p>【最後目標】</p>
 <p>尋找這樣的連續四個數，求相乘最大的結果。</p>
-<p><a href="/static/file/numbers2.txt">下載檔案</a></p>
+<p><a href="/static/files/euler/numbers2.txt">下載檔案</a></p>
 <p>練習1：從檔案讀取數字串，求橫列連續四個數字相乘最大值。</p>
 <div class="highlight-python"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre> 1
  2
