--- a/templates/student/lesson/C08.html
+++ b/templates/student/lesson/C08.html
@@ -25,7 +25,7 @@
 <p>【最後目標】</p>
 <p>在這個50行*20列=1000個數字串中，將所有相鄰的13個數字相乘所得的乘積中，請求出最大的乘積。</p>
 <p>練習1：從檔案讀取數字串 </p>
-<p><a href="/static/file/numbers.txt">下載檔案</a>
+<p><a href="/static/files/euler/numbers.txt">下載檔案</a>
 <div class="highlight-python"><div class="highlight"><pre><span class="c"># -*- coding: UTF-8 -*-</span>
 <span class="n">numbers</span> <span class="o">=</span> <span class="p">[]</span>
 
