--- a/templates/student/lesson/C18.html
+++ b/templates/student/lesson/C18.html
@@ -25,7 +25,7 @@
 </pre></div>
 </td></tr></table></div>
 <BR>
-<p><a href="/static/file/numbers4.txt">下載數字</a></p>
+<p><a href="/static/files/euler/numbers4.txt">下載數字</a></p>
 <p>練習2：讀進15層數字，並且求某一特定條路徑的數字和。</p>
 <div class="highlight-python"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre> 1
  2
