Fix: deny registration without selecting school

--- a/static/layout/styles/layout.css
+++ b/static/layout/styles/layout.css
@@ -157,3 +157,7 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 .form-control.target[contenteditable="true"] img {
     max-width: 100%;
 }
+
+.errorlist {
+  background-color: lightpink;
+}
