--- a/templates/certificate/show.html
+++ b/templates/certificate/show.html
@@ -2,5 +2,5 @@
 {% load tz %}
 {% block title %} Teachers {% endblock %}
 {% block content %}
-<img src="/{{certificate_image}}">
+<img src="/static/certification/{{certificate_image}}">
 {% endblock %}
