--- a/static/layout/styles/layout.css
+++ b/static/layout/styles/layout.css
@@ -24,6 +24,16 @@ body{margin:0; padding:0; font-size:16px; font-family:Georgia, "Times New Roman"
     border: 1px solid; 
 }
 
+.btn-circle {
+    width: 30px;
+    height: 30px;
+    padding: 6px 0px;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 1.42857;
+}
+
 .justify{text-align:justify;}
 .bold{font-weight:bold;}
 .center{text-align:center;}
