--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -13,87 +13,78 @@
   <h1>{{profile.user.first_name}}個人檔案</h1>
 <p>信箱：{{profile.user.email}}</p>
 <p>學校：{{school}}</p>
-<p>
-班級：
+<p>班級：
 {% for enroll in enrolls reversed %}
 {{enroll.classroom.name}}({{enroll.seat}}號)
 {% endfor %}
 </p>
-  <ul class="tabs">
-    <li><a href="#tab1">積分</a></li>
-    <li><a href="#tab2">作業</a></li>
-    <li><a href="#tab3">證書</a></li>
+<section class="wrapper">
+  <ul class="nav nav-pills" id="myTab" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" data-toggle="tab" href="#tab1" role="tab" aria-selected="true">積分</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#tab2" role="tab" aria-selected="false">證書</a>
+    </li>
   </ul>
-  <div class="clr"></div>
-  <section class="block">
-    <article id="tab1">
-        <BR>
-  <Table>
+</section>
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="home-tab">
+       <Table>
 <tr><td rowspan=6 width=320><img src="/static/avatar/b{{ profile.avatar }}.png"></td></tr>
 <tr><td>總積分</td><td>{{credit}}</td><td><a href="/account/log/0/{{user_id}}">記錄</a></td></tr>
 <tr><td>作業積分</td><td>{{profile.work}}</td><td><a href="/account/log/1/{{user_id}}">記錄</a></td></tr>
 <tr><td>小老師積分</td><td>{{profile.assistant}}</td><td><a href="/account/log/2/{{user_id}}">記錄</a></td></tr>
 <tr><td>創意秀積分</td><td>{{profile.creative}}</td><td><a href="/account/log/3/{{user_id}}">記錄</a></td></tr>
-  </Table>		</article>
-   <article id="tab2">
-        <BR>
-    <table>
-    <tr>
-        <td>主題</td>
-        <td>編號</td>
-        <td>作品</td>
-        <td>評分者</td>
-        <td>分數</td>
-        <Td>日期</Td>
-
-    </tr>
-    {% for lesson in lesson_list %}
-    {% with c=forloop.counter %}
-        <tr align=left>
-        <td>{{lesson.1}}</td>
-        <td align=right>{{lesson.0}}</td>
-            <td>{{lesson.2}}</td>
-            <td>{% if lesson.5 == "null" %}尚未評分!{% else %}{{lesson.5}}{% endif %}</td>
-            {% if lesson.3 == -1 %}
-                <td>已繳交</td>
-            {% else %}
-                <td>{{lesson.3}}</td>
-            {% endif %}
-            <td>{{lesson.4|date:"Y/m/d h:i:s" }}</td>
-            
-        </tr>
-        {% endwith %}
-    {% endfor %}
-    </table>
-    </article>
-    <article id="tab3">
-        <BR>
+  </Table>		
+    </div>
+    <div class="tab-pane fade hide" id="tab2" role="tabpanel" aria-labelledby="home-tab">
+      <table>
+      
         {% for enroll in enrolls %}
         {% if enroll.certificate1 %}
-        <img src='/static/certificate/1/{{enroll.id}}.jpg'>
-        <Br><hr>
+        <tr><td><img src='/static/certification/1/1/{{enroll.id}}.jpg'></td></tr>
         {% endif %}
 
         {% if enroll.certificate2 %}
-        <img src='/static/certificate/2/{{enroll.id}}.jpg'>
-        <Br><hr>
+        <tr><td><img src='/static/certification/1/2/{{enroll.id}}.jpg'></td></tr>
         {% endif %}
 
         {% if enroll.certificate3 %}
-        <img src='/static/certificate/3/{{enroll.id}}.jpg'>
-        <Br><hr>
+        <tr><td><img src='/static/certification/1/3/{{enroll.id}}.jpg'></td></tr>
         {% endif %}
 
         {% if enroll.certificate4 %}
-        <img src='/static/certificate/4/{{enroll.id}}.jpg'>
-        <Br><hr>
-        {% endif %}
+        <tr><td><img src='/static/certification/1/4/{{enroll.id}}.jpg'></td></tr>
+        {% endif %}          
+         
+        {% if enroll.certificate_vphysics %}
+        <tr><td><img src='/static/certification/2/1/{{enroll.id}}.jpg'></td></tr>
+        {% endif %}       
+          
+        {% if enroll.certificate_euler %}
+        <tr><td><img src='/static/certification/3/1/{{enroll.id}}.jpg'></td></tr>
+        {% endif %}                 
         {% endfor %}    
-        {% if hour_of_code %}
-        <img src="/{{hour_of_code.picture}}">
-        {% endif %}
-        </article>
-    </article>
-  </section>
-</section>
+
+      </table>
+    </div>
+  </div>
+{% endblock %}
+          
+{% block footer_script %}
+<script>
+window.onload = function(){  
+
+    var url = document.location.toString();
+    if (url.match('#')) {
+        $('.nav-pills a[href="#' + url.split('#')[1] + '"]').tab('show');
+    }
+
+    //Change hash for page-reload
+    $('.nav-pills a[href="#' + url.split('#')[1] + '"]').on('shown', function (e) {
+        window.location.hash = e.target.hash;
+    }); 
+}           
+</script>
 {% endblock %}
