--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -71,8 +71,8 @@
     </div>
   </div>
 {% endblock %}
-{% block dormready %}
-$( window ).on( 'hashchange', function( e ) {
+{% block domready %}
+$(window).bind('hashchange', function() {
     var url = document.location.toString();
     if (url.match('#')) {
         $('.nav-pills a[href="#' + url.split('#')[1] + '"]').tab('show');
