--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -149,11 +149,6 @@
   <p class="author" style="text-align:center;">- 國立臺灣大學 物理學系 石明豐教授</p>
 </div>
   
-<div class="mySlides">
-  <q>How can we help young people develop as creative thinkers so that they’re prepared for life in this ever-changing world?</q>
-  <p class="author" style="text-align:center;">- Mitchel Resnick, Lifelong Kindergarten, MIT.</p>
-</div>
-  
 <a class="prev" onclick="plusSlides(-1)">❮</a>
 <a class="next" onclick="plusSlides(1)">❯</a>
 
@@ -193,8 +188,8 @@
   
 {% block footer_script %}
 <script>
-//var slideIndex = Math.floor(Math.random() * Math.floor(3));
-var slideIndex = 1
+var slideIndex = Math.floor(Math.random() * Math.floor(2));
+//var slideIndex = 1
 showSlides(slideIndex);
 
 function plusSlides(n) {
