--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -34,47 +34,95 @@ function MM_swapImage() { //v3.0
 		<table style="border:0px; width:900px;">
 		<tr>
 		<td>
+    {% if not user.is_authenticated %}
+		  <img name="menu01" src="/static/images/scratch/lesson01L.png">
+    {% else %}	     
 			<a onmouseover="MM_swapImage('menu01','','/static/images/scratch/lesson012.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A001"><img name="menu01" src="/static/images/scratch/lesson01.png"></a>
-        </td>
+    {% endif %}
+      </td>
 		<td>
+ 		{% if not user|has_group:"teacher" and lock < 2 %}
+		  <img name="menu02" src="/static/images/scratch/lesson02L.png">
+    {% else %}	     
    		<a onmouseover="MM_swapImage('menu02','','/static/images/scratch/lesson022.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A002"><img name="menu02" src="/static/images/scratch/lesson02.png"></a>
-		</td>
+		{% endif %}
+      </td>
 		<td>
+ 		{% if not user|has_group:"teacher" and lock < 3 %}
+		  <img name="menu03" src="/static/images/scratch/lesson03L.png">
+    {% else %}	        
 			<a onmouseover="MM_swapImage('menu03','','/static/images/scratch/lesson032.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A003"><img name="menu03" src="/static/images/scratch/lesson03.png"></a>
-		</td>  
+    {% endif %}
+    </td>  
 		</td>
     </tr>      
     <tr>
 		<td>
+ 		{% if not user|has_group:"teacher" and lock < 5 %}
+		  <img name="menu04" src="/static/images/scratch/lesson04L.png">
+    {% else %}      
 			<a onmouseover="MM_swapImage('menu04','','/static/images/scratch/lesson042.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A004"><img name="menu04" src="/static/images/scratch/lesson04.png"></a>
+    {% endif %}
     <td>
+ 		{% if not user|has_group:"teacher" and lock < 7 %}
+		  <img name="menu05" src="/static/images/scratch/lesson05L.png">
+    {% else %}      
 			<a onmouseover="MM_swapImage('menu05','','/static/images/scratch/lesson052.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A005"><img name="menu05" src="/static/images/scratch/lesson05.png"></a>
+    {% endif %}
     </td>
 		<td>
+ 		{% if not user|has_group:"teacher" and lock < 9 %}
+		  <img name="menu06" src="/static/images/scratch/lesson06L.png">
+    {% else %}      
 			<a onmouseover="MM_swapImage('menu06','','/static/images/scratch/lesson062.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A006"><img name="menu06" src="/static/images/scratch/lesson06.png"></a>
-		</td>
+		{% endif %}
+    </td>
 		</tr>
 		<tr>      
 		<td>
+ 		{% if not user|has_group:"teacher" and lock < 11 %}
+		  <img name="menu07" src="/static/images/scratch/lesson07L.png">
+    {% else %}
 			<a onmouseover="MM_swapImage('menu07','','/static/images/scratch/lesson072.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A007"><img name="menu07" src="/static/images/scratch/lesson07.png"></a>
-		</td>
+		{% endif %}
+    </td>
 		<td>
+ 		{% if not user|has_group:"teacher" and lock < 13 %}
+		  <img name="menu08" src="/static/images/scratch/lesson08L.png">
+    {% else %}      
 			<a onmouseover="MM_swapImage('menu08','','/static/images/scratch/lesson082.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A008"><img name="menu08" src="/static/images/scratch/lesson08.png"></a>
-		</td>		
+		{% endif %}
+    </td>		
 		<td>
+    {% if not user|has_group:"teacher" and lock < 14 %}
+		  <img name="menu09" src="/static/images/scratch/lesson093L.png">
+    {% else %}     
 			<a onmouseover="MM_swapImage('menu09','','/static/images/scratch/lesson092.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A009"><img name="menu09" src="/static/images/scratch/lesson09.png"></a>
-        </td>
+    {% endif %}
+    </td>
 		</tr>
 		<tr>      
 		<td>
+    {% if not user|has_group:"teacher" and lock < 14 %}
+		  <img name="menu10" src="/static/images/scratch/lesson09L.png">
+    {% else %}       
 			<a onmouseover="MM_swapImage('menu10','','/static/images/scratch/lesson094.png',1);" onmouseout=MM_swapImgRestore() href="/student/exam/"><img name="menu10" src="/static/images/scratch/lesson093.png"></a>
-		</td>
+		{% endif %}
+    </td>
 		<td>
+    {% if not user|has_group:"teacher" and lock < 15 %}
+		  <img name="menu11" src="/static/images/scratch/lesson10L.png">
+    {% else %}       
 			<a onmouseover="MM_swapImage('menu11','','/static/images/scratch/lesson102.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A010"><img name="menu11" src="/static/images/scratch/lesson10.png"></a>
-		</td>
+		{% endif %}
+    </td>
 		<td>
+    {% if not user|has_group:"teacher" and lock < 16 %}
+		  <img name="menu12" src="/static/images/scratch/lesson11L.png">
+    {% else %}       
 			<a onmouseover="MM_swapImage('menu12','','/static/images/scratch/lesson112.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A011"><img name="menu12" src="/static/images/scratch/lesson11.png"></a>
-		</td>		
+	  {% endif %}
+    </td>		
 		</tr>
 	  	</table>
 <hr>
@@ -197,27 +245,99 @@ function MM_swapImage() { //v3.0
 		<table style="border:0px; width:900px;">
   <tr>
   <td>
-<a onmouseover="MM_swapImage('menu01','','/static/images/vphysics/vphysics012.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B01"><img name=menu01 src="/static/images/vphysics/vphysics01.png"></a><br><br>
+    {% if not user.is_authenticated %}
+		  <img name="menu01" src="/static/images/vphysics/vphysics013.png"><BR><BR>
+    {% else %}	     
+    <a onmouseover="MM_swapImage('menu01','','/static/images/vphysics/vphysics012.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B01"><img name=menu01 src="/static/images/vphysics/vphysics01.png"></a><br><br>
+    {% endif %}
+    {% if not user|has_group:"teacher" and lock < 4 %}
+		  <img name="menu03" src="/static/images/vphysics/vphysics033.png"><BR><BR>
+    {% else %}	     
 <a onmouseover="MM_swapImage('menu03','','/static/images/vphysics/vphysics032.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B03"><img name=menu03 src="/static/images/vphysics/vphysics03.png"></a><br><br>
-<a onmouseover="MM_swapImage('menu05','','/static/images/vphysics/vphysics052.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B05"><img name=menu05 src="/static/images/vphysics/vphysics05.png"></a><br><br>
-<a onmouseover="MM_swapImage('menu07','','/static/images/vphysics/vphysics072.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B07"><img name=menu07 src="/static/images/vphysics/vphysics07.png"></a><br><br>
-<a onmouseover="MM_swapImage('menu09','','/static/images/vphysics/vphysics092.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B09"><img name=menu09 src="/static/images/vphysics/vphysics09.png"></a><br><br>
-<a onmouseover="MM_swapImage('menu11','','/static/images/vphysics/vphysics112.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B11"><img name=menu11 src="/static/images/vphysics/vphysics11.png"></a><br><br>
-<a onmouseover="MM_swapImage('menu13','','/static/images/vphysics/vphysics132.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B13"><img name=menu13 src="/static/images/vphysics/vphysics13.png"></a><br><br>
-<a onmouseover="MM_swapImage('menu15','','/static/images/vphysics/vphysics152.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B15"><img name=menu15 src="/static/images/vphysics/vphysics15.png"></a><br><br>
-<a onmouseover="MM_swapImage('menu17','','/static/images/vphysics/vphysics172.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B17"><img name=menu17 src="/static/images/vphysics/vphysics17.png"></a><br><br>
-</td>
+    {% endif %}
+    {% if not user|has_group:"teacher" and lock < 6 %}
+		  <img name="menu05" src="/static/images/vphysics/vphysics053.png"><BR><BR>
+    {% else %}	 
+    <a onmouseover="MM_swapImage('menu05','','/static/images/vphysics/vphysics052.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B05"><img name=menu05 src="/static/images/vphysics/vphysics05.png"></a><br><br>
+    {% endif %}
+    {% if not user|has_group:"teacher" and lock < 8 %}
+		  <img name="menu07" src="/static/images/vphysics/vphysics073.png"><BR><BR>
+    {% else %}	     
+    <a onmouseover="MM_swapImage('menu07','','/static/images/vphysics/vphysics072.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B07"><img name=menu07 src="/static/images/vphysics/vphysics07.png"></a><br><br>
+    {% endif %}
+    {% if not user|has_group:"teacher" and lock < 10 %}
+		  <img name="menu09" src="/static/images/vphysics/vphysics093.png"><BR><BR>
+    {% else %}	     
+    <a onmouseover="MM_swapImage('menu09','','/static/images/vphysics/vphysics092.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B09"><img name=menu09 src="/static/images/vphysics/vphysics09.png"></a><br><br>
+    {% endif %}
+    {% if not user|has_group:"teacher" and lock < 12 %}
+		  <img name="menu11" src="/static/images/vphysics/vphysics113.png"><BR><BR>
+    {% else %}	     
+    <a onmouseover="MM_swapImage('menu11','','/static/images/vphysics/vphysics112.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B11"><img name=menu11 src="/static/images/vphysics/vphysics11.png"></a><br><br>
+    {% endif %}
+    {% if not user|has_group:"teacher" and lock < 14 %}
+		  <img name="menu13" src="/static/images/vphysics/vphysics133.png"><BR><BR>
+    {% else %}	     
+    <a onmouseover="MM_swapImage('menu13','','/static/images/vphysics/vphysics132.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B13"><img name=menu13 src="/static/images/vphysics/vphysics13.png"></a><br><br>
+    {% endif %}
+    {% if not user|has_group:"teacher" and lock < 16 %}
+		  <img name="menu15" src="/static/images/vphysics/vphysics153.png"><BR><BR>
+    {% else %}	     
+    <a onmouseover="MM_swapImage('menu15','','/static/images/vphysics/vphysics152.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B15"><img name=menu15 src="/static/images/vphysics/vphysics15.png"></a><br><br>
+    {% endif %}
+    {% if not user|has_group:"teacher" and lock < 17 %}
+		  <img name="menu17" src="/static/images/vphysics/vphysics173.png"><BR><BR>
+    {% else %}	     
+    <a onmouseover="MM_swapImage('menu17','','/static/images/vphysics/vphysics172.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B17"><img name=menu17 src="/static/images/vphysics/vphysics17.png"></a><br><br>
+    {% endif %}
+    </td>
   <td>
-<a onmouseover="MM_swapImage('menu02','','/static/images/vphysics/vphysics022.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B02"><img name=menu02 src="/static/images/vphysics/vphysics02.png"></a><br><br>
-<a onmouseover="MM_swapImage('menu04','','/static/images/vphysics/vphysics042.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B04"><img name=menu04 src="/static/images/vphysics/vphysics04.png"></a><br><br>
-<a onmouseover="MM_swapImage('menu06','','/static/images/vphysics/vphysics062.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B06"><img name=menu06 src="/static/images/vphysics/vphysics06.png"></a><br><br>
-<a onmouseover="MM_swapImage('menu08','','/static/images/vphysics/vphysics082.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B08"><img name=menu08 src="/static/images/vphysics/vphysics08.png"></a><br><br>
-<a onmouseover="MM_swapImage('menu10','','/static/images/vphysics/vphysics102.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B10"><img name=menu10 src="/static/images/vphysics/vphysics10.png"></a><br><br>
-<a onmouseover="MM_swapImage('menu12','','/static/images/vphysics/vphysics122.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B12"><img name=menu12 src="/static/images/vphysics/vphysics12.png"></a><br><br>
-<a onmouseover="MM_swapImage('menu14','','/static/images/vphysics/vphysics142.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B14"><img name=menu14 src="/static/images/vphysics/vphysics14.png"></a><br><br>
-<a onmouseover="MM_swapImage('menu16','','/static/images/vphysics/vphysics162.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B16"><img name=menu16 src="/static/images/vphysics/vphysics16.png"></a><br><br>
-<a onmouseover="MM_swapImage('menu18','','/static/images/vphysics/vphysics182.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B18"><img name=menu18 src="/static/images/vphysics/vphysics18.png"></a><br><br>
-</td>
+    {% if not user|has_group:"teacher" and lock < 3 %}
+		  <img name="menu02" src="/static/images/vphysics/vphysics023.png"><BR><BR>
+    {% else %}	 
+    <a onmouseover="MM_swapImage('menu02','','/static/images/vphysics/vphysics022.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B02"><img name=menu02 src="/static/images/vphysics/vphysics02.png"></a><br><br>
+    {% endif %}
+    {% if not user|has_group:"teacher" and lock < 5 %}
+		  <img name="menu04" src="/static/images/vphysics/vphysics043.png"><BR><BR>
+    {% else %}	     
+    <a onmouseover="MM_swapImage('menu04','','/static/images/vphysics/vphysics042.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B04"><img name=menu04 src="/static/images/vphysics/vphysics04.png"></a><br><br>
+    {% endif %}
+    {% if not user|has_group:"teacher" and lock < 7 %}
+		  <img name="menu06" src="/static/images/vphysics/vphysics063.png"><BR><BR>
+    {% else %}	     
+    <a onmouseover="MM_swapImage('menu06','','/static/images/vphysics/vphysics062.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B06"><img name=menu06 src="/static/images/vphysics/vphysics06.png"></a><br><br>
+    {% endif %}
+    {% if not user|has_group:"teacher" and lock < 9 %}
+		  <img name="menu08" src="/static/images/vphysics/vphysics083.png"><BR><BR>
+    {% else %}	     
+    <a onmouseover="MM_swapImage('menu08','','/static/images/vphysics/vphysics082.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B08"><img name=menu08 src="/static/images/vphysics/vphysics08.png"></a><br><br>
+    {% endif %}
+    {% if not user|has_group:"teacher" and lock < 11 %}
+		  <img name="menu10" src="/static/images/vphysics/vphysics103.png"><BR><BR>
+    {% else %}	     
+    <a onmouseover="MM_swapImage('menu10','','/static/images/vphysics/vphysics102.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B10"><img name=menu10 src="/static/images/vphysics/vphysics10.png"></a><br><br>
+    {% endif %}
+    {% if not user|has_group:"teacher" and lock < 13 %}
+		  <img name="menu12" src="/static/images/vphysics/vphysics123.png"><BR><BR>
+    {% else %}	     
+    <a onmouseover="MM_swapImage('menu12','','/static/images/vphysics/vphysics122.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B12"><img name=menu12 src="/static/images/vphysics/vphysics12.png"></a><br><br>
+    {% endif %}
+    {% if not user|has_group:"teacher" and lock < 15 %}
+		  <img name="menu14" src="/static/images/vphysics/vphysics143.png"><BR><BR>
+    {% else %}	     
+    <a onmouseover="MM_swapImage('menu14','','/static/images/vphysics/vphysics142.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B14"><img name=menu14 src="/static/images/vphysics/vphysics14.png"></a><br><br>
+    {% endif %}
+    {% if not user|has_group:"teacher" and lock < 17 %}
+		  <img name="menu16" src="/static/images/vphysics/vphysics163.png"><BR><BR>
+    {% else %}	     
+    <a onmouseover="MM_swapImage('menu16','','/static/images/vphysics/vphysics162.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B16"><img name=menu16 src="/static/images/vphysics/vphysics16.png"></a><br><br>
+    {% endif %}
+    {% if not user|has_group:"teacher" and lock < 17 %}
+		  <img name="menu18" src="/static/images/vphysics/vphysics183.png"><BR><BR>
+    {% else %}	     
+    <a onmouseover="MM_swapImage('menu18','','/static/images/vphysics/vphysics182.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/B18"><img name=menu18 src="/static/images/vphysics/vphysics18.png"></a><br><br>
+    {% endif %}
+    </td>
   </tr>
   </table>
 <img src="/static/images/vphysics/certificate.png">
