--- a/static/layout/styles/layout.css
+++ b/static/layout/styles/layout.css
@@ -171,3 +171,7 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 .errorlist {
   background-color: lightpink;
 }
+
+table.tablesorter tr:hover td {
+    background: #faffbc;
+}
