--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -127,7 +127,7 @@ function MM_swapImage() { //v3.0
 	  	</table>
 <hr>
 		<table style="border:0px; width:900px;">
-		<tr>
+      <tr><td rowspan=4 valign=top><img src="/static/images/scratch/lesson_banner2.png" width=70px></td>
 			<td>
 			<a onmouseover="MM_swapImage('menuA01','','/static/images/scratch/lesson_A012.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A101"><img name="menuA01" src="/static/images/scratch/lesson_A01.png"></a>
 			</td>
@@ -166,76 +166,77 @@ function MM_swapImage() { //v3.0
 		</table>
 <hr>
 		<table style="border:0px; width:900px;">
-		<tr>
-			<td>
-			<a onmouseover="MM_swapImage('menuB01','','/static/images/scratch/lesson_B012.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A201"><img name="menuB01" src="/static/images/scratch/lesson_B01.png"></a>
+      <tr><td rowspan=4 valign=top><img src="/static/images/scratch/lesson_banner3.png" width=60px></td>
+      <td>
+			<a onmouseover="MM_swapImage('menuB01','','/static/images/scratch/lesson_B012.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A201"><img name="menuB01" src="/static/images/scratch/lesson_B01.png" width=400px></a>
 			</td>
 			<td>
-			<a onmouseover="MM_swapImage('menuB02','','/static/images/scratch/lesson_B022.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A202"><img name="menuB02" src="/static/images/scratch/lesson_B02.png"></a>
-			</td>
-		</tr>
-		<tr>
-			<td>
-			<a onmouseover="MM_swapImage('menuB03','','/static/images/scratch/lesson_B032.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A203"><img name="menuB03" src="/static/images/scratch/lesson_B03.png"></a>
-			</td>
-			<td>
-			<a onmouseover="MM_swapImage('menuB04','','/static/images/scratch/lesson_B042.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A204"><img name="menuB04" src="/static/images/scratch/lesson_B04.png"></a>
+			<a onmouseover="MM_swapImage('menuB02','','/static/images/scratch/lesson_B022.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A202"><img name="menuB02" src="/static/images/scratch/lesson_B02.png" width=400px></a>
 			</td>
 		</tr>
 		<tr>
 			<td>
-			<a onmouseover="MM_swapImage('menuB05','','/static/images/scratch/lesson_B052.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A205"><img name="menuB05" src="/static/images/scratch/lesson_B05.png"></a>
+			<a onmouseover="MM_swapImage('menuB03','','/static/images/scratch/lesson_B032.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A203"><img name="menuB03" src="/static/images/scratch/lesson_B03.png" width=400px></a>
 			</td>
 			<td>
-			<a onmouseover="MM_swapImage('menuB06','','/static/images/scratch/lesson_B062.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A206"><img name="menuB06" src="/static/images/scratch/lesson_B06.png"></a>
+			<a onmouseover="MM_swapImage('menuB04','','/static/images/scratch/lesson_B042.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A204"><img name="menuB04" src="/static/images/scratch/lesson_B04.png" width=400px></a>
 			</td>
 		</tr>
 		<tr>
 			<td>
-			<a onmouseover="MM_swapImage('menuB07','','/static/images/scratch/lesson_B072.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A207"><img name="menuB07" src="/static/images/scratch/lesson_B07.png"></a>
+			<a onmouseover="MM_swapImage('menuB05','','/static/images/scratch/lesson_B052.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A205"><img name="menuB05" src="/static/images/scratch/lesson_B05.png" width=400px></a>
 			</td>
 			<td>
-			<a onmouseover="MM_swapImage('menuB08','','/static/images/scratch/lesson_B082.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A208"><img name="menuB08" src="/static/images/scratch/lesson_B08.png"></a>
+			<a onmouseover="MM_swapImage('menuB06','','/static/images/scratch/lesson_B062.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A206"><img name="menuB06" src="/static/images/scratch/lesson_B06.png" width=400px></a>
+			</td>
+		</tr>
+		<tr>
+			<td>
+			<a onmouseover="MM_swapImage('menuB07','','/static/images/scratch/lesson_B072.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A207"><img name="menuB07" src="/static/images/scratch/lesson_B07.png" width=400px></a>
+			</td>
+			<td>
+			<a onmouseover="MM_swapImage('menuB08','','/static/images/scratch/lesson_B082.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A208"><img name="menuB08" src="/static/images/scratch/lesson_B08.png" width=400px></a>
 			</td>
 		</tr>
 		
 		</table>
 <hr>
 		<table style="border:0px; width:900px;">
-		<tr>
+      <tr><td rowspan=4 valign=top><img src="/static/images/scratch/lesson_banner4.png" width=60px></td>
 			<td>
-			　　<a onmouseover="MM_swapImage('menuC01','','/static/images/scratch/lesson_C012.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A301"><img name="menuC01" src="/static/images/scratch/lesson_C01.png"></a>
+			　　<a onmouseover="MM_swapImage('menuC01','','/static/images/scratch/lesson_C012.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A301"><img name="menuC01" src="/static/images/scratch/lesson_C01.png" width=370px></a>
 			</td>
 			<td>
-			　　<a onmouseover="MM_swapImage('menuC02','','/static/images/scratch/lesson_C022.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A302"><img name="menuC02" src="/static/images/scratch/lesson_C02.png"></a>
-			</td>
-		</tr>
-		<tr>
-			<td>
-			　　<a onmouseover="MM_swapImage('menuC03','','/static/images/scratch/lesson_C032.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A303"><img name="menuC03" src="/static/images/scratch/lesson_C03.png"></a>
-			</td>
-			<td>
-			　　<a onmouseover="MM_swapImage('menuC04','','/static/images/scratch/lesson_C042.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A304"><img name="menuC04" src="/static/images/scratch/lesson_C04.png"></a>
+			　　<a onmouseover="MM_swapImage('menuC02','','/static/images/scratch/lesson_C022.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A302"><img name="menuC02" src="/static/images/scratch/lesson_C02.png" width=370px></a>
 			</td>
 		</tr>
 		<tr>
 			<td>
-			　　<a onmouseover="MM_swapImage('menuC05','','/static/images/scratch/lesson_C052.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A305"><img name="menuC05" src="/static/images/scratch/lesson_C05.png"></a>
+			　　<a onmouseover="MM_swapImage('menuC03','','/static/images/scratch/lesson_C032.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A303"><img name="menuC03" src="/static/images/scratch/lesson_C03.png" width=370px></a>
 			</td>
 			<td>
-			　　<a onmouseover="MM_swapImage('menuC06','','/static/images/scratch/lesson_C062.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A306"><img name="menuC06" src="/static/images/scratch/lesson_C06.png"></a>
+			　　<a onmouseover="MM_swapImage('menuC04','','/static/images/scratch/lesson_C042.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A304"><img name="menuC04" src="/static/images/scratch/lesson_C04.png" width=370px></a>
 			</td>
 		</tr>
 		<tr>
 			<td>
-			　　<a onmouseover="MM_swapImage('menuC07','','/static/images/scratch/lesson_C072.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A307"><img name="menuC07" src="/static/images/scratch/lesson_C07.png"></a>
+			　　<a onmouseover="MM_swapImage('menuC05','','/static/images/scratch/lesson_C052.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A305"><img name="menuC05" src="/static/images/scratch/lesson_C05.png" width=370px></a>
 			</td>
 			<td>
-			　　<a onmouseover="MM_swapImage('menuC08','','/static/images/scratch/lesson_C082.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A308"><img name="menuC08" src="/static/images/scratch/lesson_C08.png"></a>
+			　　<a onmouseover="MM_swapImage('menuC06','','/static/images/scratch/lesson_C062.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A306"><img name="menuC06" src="/static/images/scratch/lesson_C06.png" width=370px></a>
+			</td>
+		</tr>
+		<tr>
+			<td>
+			　　<a onmouseover="MM_swapImage('menuC07','','/static/images/scratch/lesson_C072.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A307"><img name="menuC07" src="/static/images/scratch/lesson_C07.png" width=370px></a>
+			</td>
+			<td>
+			　　<a onmouseover="MM_swapImage('menuC08','','/static/images/scratch/lesson_C082.png',1);" onmouseout=MM_swapImgRestore() href="/student/lesson/A308"><img name="menuC08" src="/static/images/scratch/lesson_C08.png" width=370px></a>
 			</td>			
 		</tr>
 		
 		</table>
+<BR><BR>
 <img src="/static/images/scratch/certificate.png">
 {% elif subject_id == "B" %}
 <img src="/static/images/vphysics/vphysics.png">
@@ -374,5 +375,5 @@ function MM_swapImage() { //v3.0
   </table> 
 <img src="/static/images/euler/certificate.png">	
 {% endif %}
-<BR>本單元課程自2018.7.1日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次	
+<BR>本單元課程自2018.4.23日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次	
 {% endblock %}
