--- a/templates/student/lessonA.html
+++ b/templates/student/lessonA.html
@@ -8,7 +8,7 @@
       <a class="nav-link active" data-toggle="tab" href="#tab1" role="tab" aria-selected="true">影片：為什麼要學程式設計</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/survey/pre_survey" role="tab" aria-selected="false">問卷</a>
+      <a class="nav-link" href="/survey/pre_survey1" role="tab" aria-selected="false">問卷</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="javascript:window.open('https://studio.code.org/hoc/1','_blank');" role="tab" aria-controls="contact" aria-selected="false">1小時學程式設計</a>
@@ -648,6 +648,9 @@
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tab9" role="tab" aria-selected="false">作業：打磚塊</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/survey/post_survey1" role="tab" aria-selected="false">問卷</a>
+    </li>    
     {% endif %}
   </ul>
     <br />
