--- a/templates/student/submitB.html
+++ b/templates/student/submitB.html
@@ -74,6 +74,8 @@
       <option value=2 {% if helps == 2 %} selected {% endif %}>同學幫很多忙</option>
       <option value=3 {% if helps == 3 %} selected {% endif %}>解答幫一點忙</option>
       <option value=4 {% if helps == 4 %} selected {% endif %}>解答幫很多忙</option>
+      <option value=5 {% if helps == 5 %} selected {% endif %}>老師幫一點忙</option>
+      <option value=6 {% if helps == 6 %} selected {% endif %}>老師幫很多忙</option>      
     </select>
     {% endwith %}
   </div>  
